py: merging dictionary

--- a/Py/15tips_n_trics/tt.ipynb
+++ b/Py/15tips_n_trics/tt.ipynb
@@ -23,7 +23,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 🚀Unpacking Argument Lists"
+    "## Functions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 🚀Unpacking Argument Lists"
    ]
   },
   {
@@ -96,7 +103,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Callback: functions with parameters, class methods as callback"
+    "### Callback: functions with parameters, class methods as callback"
    ]
   },
   {
@@ -149,6 +156,120 @@
     "\n",
     "t = Tester()\n",
     "callbackWithParam(t.test, [1, 2])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "def withParam(cb, param):\n",
+    "    return cb(*param)\n",
+    "\n",
+    "def fun(a,b):\n",
+    "\tprint(a+b)\n",
+    "\n",
+    "\n",
+    "print(withParam(fun, [1, 2]))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from time import sleep\n",
+    "from rich.console import Console\n",
+    "console = Console()\n",
+    "\n",
+    "def withLoaderWithParam(cb, param, message=\"\", spinner='aesthetic'):\n",
+    "    done = False\n",
+    "    returns = None\n",
+    "    with console.status(f\"[bold yellow] {message}...\", spinner=spinner) as s:\n",
+    "        while not done:\n",
+    "            returns = cb(*param)\n",
+    "            done = True\n",
+    "    return returns\n",
+    "\n",
+    "\n",
+    "withLoaderWithParam(sleep, [5], message=\"Sleeping for 5 seconds\", spinner='dots')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## DSA"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Merging Dictionaries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1: 2, 3: 4}"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def merge_dicts(*dict_args):\n",
+    "    result = {}\n",
+    "    for dictionary in dict_args:\n",
+    "        result.update(dictionary)\n",
+    "    return result\n",
+    "\t\n",
+    "merge_dicts({1:2}, {3:4})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exclude Dictionary Keys"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def exclude_dict_keys(d, keys):\n",
+    "    return {k: v for k, v in d.items() if k not in keys}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exclude_dict_keys({1:2, 3:4}, [1])"
    ]
   }
  ],
