py: exclude dictionary key

--- a/Py/15tips_n_trics/tt.ipynb
+++ b/Py/15tips_n_trics/tt.ipynb
@@ -255,21 +255,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{3: 4}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def exclude_dict_keys(d, keys):\n",
-    "    return {k: v for k, v in d.items() if k not in keys}\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "exclude_dict_keys({1:2, 3:4}, [1])"
+    "    return {k: v for k, v in d.items() if k not in keys}\n",
+    "\n",
+    "\n",
+    "exclude_dict_keys({1: 2, 3: 4}, [1])\n"
    ]
   }
  ],
