--- a/Py/08modules/built_in/datetime/datetime.ipynb
+++ b/Py/08modules/built_in/datetime/datetime.ipynb
@@ -4,55 +4,58 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# DateTime\n",
-    "\n",
-    "[https://realpython.com/python-datetime/](https://realpython.com/python-datetime/)"
+    "# DateTime"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import datetime"
+    "\"\"\" \n",
+    "cd .\\Py\\08modules\\built_in\\datetime\\\n",
+    "jupyter nbconvert --to markdown datetime.ipynb --output README.md\n",
+    "\n",
+    " \"\"\"\n",
+    "from datetime import datetime,date\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "datetime.datetime(2021, 10, 16, 23, 58, 39, 133743)"
+       "datetime.datetime(2022, 6, 19, 23, 13, 26, 727317)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "datetime.datetime.now()"
+    "datetime.now()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2021-10-16\n"
+      "2022-06-19\n"
      ]
     }
    ],
    "source": [
-    "date_object = datetime.date.today()\n",
+    "date_object = date.today()\n",
     "print(date_object)"
    ]
   },
@@ -65,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +77,7 @@
        "datetime.date(2020, 1, 31)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +98,7 @@
        "datetime.time(13, 14, 31)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +118,7 @@
        "datetime.datetime(2020, 1, 31, 13, 14, 31)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +145,7 @@
        "datetime.date(2020, 1, 31)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,32 +157,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Countdown to DEADLINE: 56 days, 7:56:10.039381\n"
+      "2022-06-19 23:14:20.711485\n",
+      "23:14:20\n",
+      "2022-06-19 23:14:20\n",
+      "2022-06-08 16:02:13\n",
+      "2022-06-08 16:02:13\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(datetime.now())\n",
+    "print(datetime.now().strftime('%H:%M:%S'))\n",
+    "print(datetime.now().strftime('%Y-%m-%d %H:%M:%S'))\n",
+    "print(datetime.strptime(\n",
+    "    \"2022-06-08 16:02:13.885533+06:00\".split(\".\")[0], '%Y-%m-%d %H:%M:%S'))\n",
+    "print(datetime.fromisoformat(\n",
+    "    \"2022-06-08 16:02:13.885533+06:00\").strftime('%Y-%m-%d %H:%M:%S'))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## DEADLINE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2022-06-19 23:15:19.630033\n",
+      "2022-12-12 08:00:00\n",
+      "Countdown to DEADLINE: 175 days, 8:44:40.368963\n"
      ]
     }
    ],
    "source": [
     "from datetime import datetime\n",
-    "\n",
-    "DEADLINE = datetime(year=2021, month=12, day=12, hour=8)\n",
+    "print(datetime.now())\n",
+    "DEADLINE = datetime(year=2022, month=12, day=12, hour=8)\n",
+    "print(DEADLINE)\n",
     "countdown = DEADLINE - datetime.now()\n",
     "print(f\"Countdown to DEADLINE: {countdown}\")\n"
    ]
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "b3ba2566441a7c06988d0923437866b63cedc61552a5af99d1f4fb67d367b25f"
-  },
   "kernelspec": {
-   "display_name": "Python 3.8.10 64-bit ('base': conda)",
+   "display_name": "Python 3.9.7 ('base')",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
@@ -192,9 +230,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.7"
   },
-  "orig_nbformat": 2
+  "orig_nbformat": 2,
+  "vscode": {
+   "interpreter": {
+    "hash": "13a64c48d63ab7fa89dd239a6172cf842d756bd82fcb4ba948a9115b41dc50a1"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
