py: tips_n_tricks: unpacking keywords args. with callback

--- a/Py/15tips_n_trics/tt.ipynb
+++ b/Py/15tips_n_trics/tt.ipynb
@@ -30,7 +30,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 🚀Unpacking Argument Lists"
+    "### 🚀Unpacking Argument Lists and Keyword Arguments"
    ]
   },
   {
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -103,64 +103,60 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Callback: functions with parameters, class methods as callback"
+    "### 🚀🚀Using Unpacking Argument Lists and Keyword Arguments to build 📢Callbacks📢"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using Unpacking Argument Lists: pass list/tuple as positional arguments to a callback function:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CallMe()\n",
-      "1 2 3\n",
-      "CallMe(1, 2, 3)\n",
-      "1 2 3\n",
-      "CallMe(1, 2, 3)\n",
-      "1 2\n",
-      "test(1, 2)\n"
+      "[1, 2]\n",
+      "3\n",
+      "(1, 2)\n",
+      "3\n",
+      "[1, 2, 3]\n",
+      "6\n"
      ]
     }
    ],
    "source": [
-    "def CallMe():\n",
-    "    print(\"CallMe()\")\n",
-    "\n",
-    "def CallMe3(a, b, c):\n",
-    "    print(f\"CallMe({a}, {b}, {c})\")\n",
-    "\t\n",
-    "class Tester:\n",
-    "    def __init__(self):\n",
-    "        pass\n",
-    "\n",
-    "    def test(self, a, b):\n",
-    "        print(f\"test({a}, {b})\")\n",
+    "def fun(a, b):\n",
+    "\treturn a + b\n",
+    "def fun2(a, b,c):\n",
+    "\treturn a + b+c\n",
+    "# takes n arguments as n size List/Tuple\n",
+    "def withListOrTupleAsParam(cb, param):\n",
+    "\tprint(param)\n",
+    "\treturn cb(*param)\n",
     "\n",
     "\n",
-    "def callback(cb):\n",
-    "    cb()\n",
-    "    \n",
-    "def callbackWithParam(cb, param):\n",
-    "    print(*param) # unpack\n",
-    "    cb(*param)\n",
-    "\n",
-    "\n",
-    "\n",
-    "callback(CallMe)\n",
-    "callbackWithParam(CallMe3, [1, 2, 3])\n",
-    "# or\n",
-    "callbackWithParam(CallMe3, (1, 2, 3))\n",
-    "\n",
-    "t = Tester()\n",
-    "callbackWithParam(t.test, [1, 2])\n"
+    "print(withListOrTupleAsParam(fun, [1, 2]))\n",
+    "print(withListOrTupleAsParam(fun, (1, 2)))\n",
+    "print(withListOrTupleAsParam(fun2, [1, 2,3]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using Unpacking Keyword Arguments: pass dictionary as keyword arguments to a callback function:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -168,19 +164,53 @@
      "output_type": "stream",
      "text": [
       "3\n",
-      "None\n"
+      "6\n",
+      "1\n"
      ]
     }
    ],
    "source": [
-    "def withParam(cb, param):\n",
-    "    return cb(*param)\n",
+    "def fun(a,b = 0, c = 0):\n",
+    "\treturn a + b + c\n",
     "\n",
-    "def fun(a,b):\n",
-    "\tprint(a+b)\n",
+    "def withDictAsParam(cb, param):\n",
+    "    return cb(**param)\n",
     "\n",
     "\n",
-    "print(withParam(fun, [1, 2]))\n"
+    "print(withDictAsParam(fun, {'a': 1, 'b': 2}))\n",
+    "print(withDictAsParam(fun, {'a': 1, 'b': 2, 'c': 3}))\n",
+    "print(withDictAsParam(fun, {'a': 1}))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "With class methods"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Tester:\n",
+    "    def __init__(self):\n",
+    "        pass\n",
+    "\n",
+    "    def fun(self,a, b):\n",
+    "        return a + b\n",
+    "\n",
+    "t = Tester()\n",
+    "withListOrTupleAsParam(t.fun,[1,2])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Example:"
    ]
   },
   {
