--- a/Py/03list/py_list.ipynb
+++ b/Py/03list/py_list.ipynb
@@ -1586,7 +1586,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### find elements in one list that are not in the other"
+    "### find elements in one list that are `not in` the other : `subtraction`"
    ]
   },
   {
@@ -1598,7 +1598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1726,7 +1726,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Shortcut: using `set`"
+    "🧠🧠🧠Shortcut: using `set`🧠🧠🧠"
    ]
   },
   {
@@ -1773,12 +1773,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Shortcut: using `dict`"
+    "Shortcut: using `np.setdiff1d"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -1787,7 +1787,7 @@
        "array([0, 2, 4, 6, 7, 8])"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1802,12 +1802,80 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### check if a list contains any item from another list python"
+    "### find elements in one list that are `in` the other : `intersection`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base_list = [0, 1, 2, 3, 4, 5, 6, 7, 8]\n",
+    "checking_list = [1, 3, 10, 12, 5]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 3, 5]"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "checking_set = set(checking_list)  # this reduces the lookup time from O(n) to O(1)\n",
+    "[item for item in base_list if item in checking_set]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 3, 5]"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(set(base_list) & set(checking_list))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### check if a list contains any item from another list python\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base_list = [0, 1, 2, 3, 4, 5, 6, 7, 8]\n",
+    "checking_list = [1, 3, 10, 12, 5]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -1820,30 +1888,31 @@
    ],
    "source": [
     "check = any(item in base_list for item in checking_list)\n",
-    "print(check)"
+    "print(check)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n"
+      "False\n"
      ]
     }
    ],
    "source": [
     "check = all(item in base_list for item in checking_list)\n",
-    "print(check)\n"
+    "print(check) #checking_list = [1, 3, 10, 12, 5]\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -1865,12 +1934,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### check if an item is a subset of another list"
+    "### check if an item is a subset of another list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -1892,7 +1961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -1901,7 +1970,7 @@
        "[2, 4, 6, 8, 10, 1, 3, 5, 7, 9, 4, 8, 12, 16, 20]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1909,13 +1978,6 @@
    "source": [
     "[item for sublist in L for item in sublist]\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
