--- a/Py/15tips_n_trics/tt.ipynb
+++ b/Py/15tips_n_trics/tt.ipynb
@@ -306,6 +306,713 @@
     "\n",
     "exclude_dict_keys({1: 2, 3: 4}, [1])\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### find elements in one list that are `not in` the other : `subtraction`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- [https://stackoverflow.com/questions/41125909/python-find-elements-in-one-list-that-are-not-in-the-other](https://stackoverflow.com/questions/41125909/python-find-elements-in-one-list-that-are-not-in-the-other)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base_list = [0, 1, 2, 3, 4, 5, 6, 7, 8]\n",
+    "checking_list = [1, 3, 5]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Native: `O(n^2)` solution:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 2, 4, 6, 7, 8]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "elements_not_in_checking_list = []\n",
+    "for elem in base_list:\n",
+    "\tif elem not in checking_list:\n",
+    "\t\telements_not_in_checking_list.append(elem)\n",
+    "elements_not_in_checking_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 2, 4, 6, 7, 8]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "[x for x in base_list if x not in checking_list]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Like mentioned in the comments below, with large lists, the above is not the ideal solution. When that's the case, a better option would be converting `checking_list` to a `set` first:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 2, 4, 6, 7, 8]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "checking_set = set(checking_list)  # this reduces the lookup time from O(n) to O(1)\n",
+    "[item for item in base_list if item not in checking_set]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Native: `O(n)` two pointer solution:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 2, 4, 6, 7, 8]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "j = 0\n",
+    "i = 0\n",
+    "elements_not_in_checking_list = []\n",
+    "while i < len(base_list):\n",
+    "    if j < len(checking_list) and base_list[i] == checking_list[j]:\n",
+    "        i += 1\n",
+    "        j += 1\n",
+    "    else:\n",
+    "        elements_not_in_checking_list.append(base_list[i])\n",
+    "        i += 1\n",
+    "elements_not_in_checking_list\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "🧠🧠🧠Shortcut: using `set`🧠🧠🧠"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 2, 4, 6, 7, 8]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "list(set(base_list) - set(checking_list))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 3, 5]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "[b for a, b in zip(base_list, checking_list) if a != b]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Shortcut: using `np.setdiff1d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 2, 4, 6, 7, 8])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "main_list = np.setdiff1d(base_list, checking_list)\n",
+    "main_list"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### find elements in one list that are `in` the other : `intersection`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base_list = [0, 1, 2, 3, 4, 5, 6, 7, 8]\n",
+    "checking_list = [1, 3, 10, 12, 5]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 3, 5]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "checking_set = set(checking_list)  # this reduces the lookup time from O(n) to O(1)\n",
+    "[item for item in base_list if item in checking_set]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 3, 5]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "list(set(base_list) & set(checking_list))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### check if a list contains any item from another list python\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base_list = [0, 1, 2, 3, 4, 5, 6, 7, 8]\n",
+    "checking_list = [1, 3, 10, 12, 5]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "check = any(item in base_list for item in checking_list)\n",
+    "print(check)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "check = all(item in base_list for item in checking_list)\n",
+    "print(check) #checking_list = [1, 3, 10, 12, 5]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "set_A = set(base_list)\n",
+    "set_B = set(checking_list)\n",
+    "output = False if (set_A.intersection(set_B) == set()) else True\n",
+    "print(output)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### check if an item is a subset of another list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Element is Present\n"
+     ]
+    }
+   ],
+   "source": [
+    "L = [[2, 4, 6, 8, 10], [1, 3, 5, 7, 9], [4, 8, 12, 16, 20]]\n",
+    "search_item = 16\n",
+    "if search_item in (item for sublist in L for item in sublist):\n",
+    "   print(\"Element is Present\")\n",
+    "else:\n",
+    "   print(\"Element Not Present\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 4, 6, 8, 10, 1, 3, 5, 7, 9, 4, 8, 12, 16, 20]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "[item for sublist in L for item in sublist]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### List of Dictionaries"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### find the index of a value in a list of dictionaries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# find the index of a value in a list of dictionaries\n",
+    "L = [ {'name': 'John', 'age': 23}, {'name': 'Jane', 'age': 21}, {'name': 'Joe', 'age': 25} ]\n",
+    "for i, d in enumerate(L):\n",
+    "\tif d['name'] == 'Jane':\n",
+    "\t\tprint(i)\n",
+    "\t\tbreak"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### list of dictionaries search\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'uuid': 1, 'p': 'a'}]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l = [{'uuid': 1, 'p': \"a\"}, {'uuid': 2, \"p\": \"b\"}]\n",
+    "[ d for d in l if d['uuid'] == 1 ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'uuid': 1, 'p': 'a'}]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(filter(lambda d: d['p'] == 'a', l))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['a']"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l = [{'uuid': 1, 'p': \"a\"}, {'uuid': 2, \"p\": \"b\"}]\n",
+    "[ d['p'] for d in l if d['uuid'] == 1 ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'uuid': 1, 'p': 'a', 'found': True}]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l = [{'uuid': 1, 'p': \"a\"}, {'uuid': 2, \"p\": \"b\"}]\n",
+    "[{**d,\"found\":True} for d in l if d['uuid'] == 1]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([{'a': 22, 'b': 'ihaha', 'c': 'fbgval'},\n",
+       "  {'a': 22, 'b': 'ihaha', 'c': 'dfdvbfjkv'}],\n",
+       " [{'a': 22, 'b': 'ihaha', 'c': 'fbgval'},\n",
+       "  {'a': 22, 'b': 'ihaha', 'c': 'dfdvbfjkv'}],\n",
+       " [{'a': 22, 'b': 'ihaha', 'c': 'fbgval'}])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def dsearch(lod, **kw):\n",
+    "    return filter(lambda i: all((i[k] == v for (k, v) in kw.items())), lod)\n",
+    "\n",
+    "\n",
+    "lod = [{'a': 33, 'b': 'test2', 'c': 'a.ing333'},\n",
+    "       {'a': 22, 'b': 'ihaha', 'c': 'fbgval'},\n",
+    "       {'a': 33, 'b': 'TEst1', 'c': 's.ing123'},\n",
+    "       {'a': 22, 'b': 'ihaha', 'c': 'dfdvbfjkv'}]\n",
+    "\n",
+    "\n",
+    "list(dsearch(lod, a=22)), list(dsearch(lod, a=22, b='ihaha')), list(\n",
+    "    dsearch(lod, a=22, c='fbgval'))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Check if element/dictionary already exists within list of dictionaries?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'main_color': 'red', 'second_color': 'blue'},\n",
+       " {'main_color': 'yellow', 'second_color': 'green'},\n",
+       " {'main_color': 'yellow', 'second_color': 'blue'}]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d = {'main_color': 'red', 'second_color': 'blue'}\n",
+    "a = [d,\n",
+    "     {'main_color': 'yellow', 'second_color': 'green'},\n",
+    "     {'main_color': 'yellow', 'second_color': 'blue'}]\n",
+    "\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found\n"
+     ]
+    }
+   ],
+   "source": [
+    "if d in a:\n",
+    "\tprint(\"Found\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'main_color': 'red', 'second_color': 'blue'}]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(filter(lambda d: d['main_color'] == 'red', a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'main_color': 'yellow', 'second_color': 'green'},\n",
+       " {'main_color': 'yellow', 'second_color': 'blue'}]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(filter(lambda d: d['main_color'] != 'red', a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "found = list(filter(lambda d: d['main_color'] == 'black', a))\n",
+    "found\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Item does not exist\n"
+     ]
+    }
+   ],
+   "source": [
+    "if not found:\n",
+    "\tprint('Item does not exist')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### add key for each dictionary in a list of dictionaries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'uuid': 1, 'p': 'a', 'new': 0}, {'uuid': 2, 'p': 'b', 'new': 0}]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[{**d,\"new\": 0 } for d in l ]"
+   ]
   }
  ],
  "metadata": {
