--- a/Py/08modules/built_in/os/py_os.ipynb
+++ b/Py/08modules/built_in/os/py_os.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -461,6 +461,173 @@
     "# os.remove()\n",
     "# os.removedirs()\n",
     "# os.rename()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Get Stats: `os.stat() & os.scandir().stat()`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "os.stat_result(st_mode=33206, st_ino=3659174697397727, st_dev=2828569586, st_nlink=1, st_uid=0, st_gid=0, st_size=12729, st_atime=1656249417, st_mtime=1653930990, st_ctime=1624143014)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.stat(\"py_os.ipynb\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- `st_atime(self)` time of most recent access,\n",
+    "- `st_mtime(self)` time of most recent content modification\n",
+    "- `st_ctime(self)` time of creation\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12729"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.stat(\"py_os.ipynb\").st_size\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13kb\n"
+     ]
+    }
+   ],
+   "source": [
+    "file_size_in_bytes = os.stat(\"py_os.ipynb\").st_size\n",
+    "\n",
+    "if file_size_in_bytes > 1000:\n",
+    "\tprint(f\"{round(file_size_in_bytes/1000)}kb\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['test_1.txt', 'test_2.txt']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# sort files by creation time\n",
+    "files = [x for x in os.listdir() if x.endswith(\".txt\")]\n",
+    "files.sort(key=lambda x: os.stat(x).st_ctime)\n",
+    "print(files)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1656250060.3008769, 1656250152.18407]\n",
+      "['test_1.txt', 'test_2.txt']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# sort files by creation time\n",
+    "files = [x for x in os.listdir() if x.endswith(\".txt\")]\n",
+    "print([ os.stat(x).st_mtime for x in files ])\n",
+    "files.sort(key=lambda x: os.stat(x).st_mtime)\n",
+    "print(files)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<DirEntry 'test_2.txt'>,\n",
+       " <DirEntry 'test_1.txt'>,\n",
+       " <DirEntry 'img'>,\n",
+       " <DirEntry 'test'>,\n",
+       " <DirEntry 'py_os.ipynb'>,\n",
+       " <DirEntry 'README.md'>,\n",
+       " <DirEntry 'newly_created'>]"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted(os.scandir(), key=lambda t: t.stat().st_ctime, reverse=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('py_os.ipynb', 1624143014.365672),\n",
+       " ('README.md', 1624143014.3646705),\n",
+       " ('test_1.txt', 1656249866.3820255),\n",
+       " ('test_2.txt', 1656249878.7464452)]"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[ (x.name,x.stat().st_ctime) for x in os.scandir() if x.is_file()]"
    ]
   }
  ],
