py: unique dict in list of dict

--- a/Py/15tips_n_trics/tt.ipynb
+++ b/Py/15tips_n_trics/tt.ipynb
@@ -311,7 +311,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### find elements in one list that are `not in` the other : `subtraction`"
+    "### 🌟🌟Among Two List🌟🌟"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### find elements in one list that are `not in` the other : `subtraction`"
    ]
   },
   {
@@ -520,7 +527,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### find elements in one list that are `in` the other : `intersection`"
+    "#### find elements in one list that are `in` the other : `intersection`"
    ]
   },
   {
@@ -576,7 +583,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### check if a list contains any item from another list python\n"
+    "#### check if a list contains any item from another list python"
    ]
   },
   {
@@ -650,7 +657,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### check if an item is a subset of another list"
+    "#### check if an item is a subset of another list"
    ]
   },
   {
@@ -698,7 +705,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### List of Dictionaries"
+    "### 🔥🔥List of Dictionaries🔥🔥"
    ]
   },
   {
@@ -734,7 +741,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### list of dictionaries search\n"
+    "#### Search in list of dictionaries \n"
    ]
   },
   {
@@ -1012,6 +1019,83 @@
    ],
    "source": [
     "[{**d,\"new\": 0 } for d in l ]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Unique dictionaries in a list of dictionaries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "L=[\n",
+    "    {'id':1,'name':'john', 'age':34},\n",
+    "\t{'id':1,'name':'john', 'age':34}, \n",
+    "\t{'id':2,'name':'hanna', 'age':30},\n",
+    "\t{'id':2,'name':'hanna', 'age':50},\n",
+    "\t{'id':3,'name':'hanna', 'age':50}\n",
+    "\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'id': 1, 'name': 'john', 'age': 34},\n",
+       " {'id': 2, 'name': 'hanna', 'age': 30},\n",
+       " {'id': 3, 'name': 'hanna', 'age': 50}]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = pd.DataFrame(L).drop_duplicates(subset=['id']).to_dict('records')\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'id': 1, 'name': 'john', 'age': 34},\n",
+       " {'id': 2, 'name': 'hanna', 'age': 50},\n",
+       " {'id': 3, 'name': 'hanna', 'age': 50}]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list({ item['id'] : item for item in L}.values())"
    ]
   }
  ],
