--- a/Py/16typed_python/padv.ipynb
+++ b/Py/16typed_python/padv.ipynb
@@ -20,6 +20,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Collection"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
