py:adv:collections

--- a/Py/11advanced_python/Collection/Collection.ipynb
+++ b/Py/11advanced_python/Collection/Collection.ipynb
@@ -23,7 +23,7 @@
    ],
    "source": [
     "\"\"\"\n",
-    "cd .\\Py\\11intermediate_python\\Collection\n",
+    "cd .\\Py\\11advanced_python\\Collection\n",
     "jupyter nbconvert --to markdown Collection.ipynb --output README.md\n",
     "\"\"\""
    ]
@@ -34,6 +34,187 @@
    "metadata": {},
    "source": [
     "## Counter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Counter({'b': 5, 'a': 4, 'c': 3})\n",
+      "dict_values([4, 5, 3])\n",
+      "dict_items([('a', 4), ('b', 5), ('c', 3)])\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import Counter\n",
+    "\n",
+    "a = \"aaaabbbbbccc\"\n",
+    "\n",
+    "counter = Counter(a)\n",
+    "\n",
+    "print(counter)\n",
+    "print(counter.values())\n",
+    "print(counter.items())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('b', 5)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(counter.most_common(1))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Named Tuple"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 -1\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import namedtuple\n",
+    "\n",
+    "Point  = namedtuple(\"Point\",['x','y'])\n",
+    "\n",
+    "pt = Point(1,-1)\n",
+    "print(pt.x, pt.y) #x y"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 🔥 Default Dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "error\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import defaultdict\n",
+    "d = defaultdict(int)\n",
+    "\n",
+    "d['a'] = 1\n",
+    "d['b'] = 2\n",
+    "\n",
+    "print(d['c']) # \n",
+    "\n",
+    "# vs\n",
+    "d = {}\n",
+    "try:\n",
+    "    print(d['c'])\n",
+    "except Exception:\n",
+    "    print('error')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n",
+      "set()\n",
+      "{}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(defaultdict(list)['x'])\n",
+    "print(defaultdict(set)['x'])\n",
+    "print(defaultdict(dict)['x'])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Deque"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "deque([1, 2])\n",
+      "deque([3, 1, 2])\n",
+      "deque([6, 5, 4, 3, 1, 2])\n",
+      "popping...\n",
+      "deque([6, 5, 4, 3, 1])\n",
+      "deque([5, 4, 3, 1])\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import deque\n",
+    "\n",
+    "d = deque()\n",
+    "d.append(1)\n",
+    "d.append(2)\n",
+    "print(d)\n",
+    "\n",
+    "d.appendleft(3)\n",
+    "print(d)\n",
+    "\n",
+    "d.extendleft([4,5,6])\n",
+    "print(d)\n",
+    "\n",
+    "print(\"popping...\")\n",
+    "d.pop()\n",
+    "print(d)\n",
+    "d.popleft()\n",
+    "print(d)"
    ]
   }
  ],
