py:opp:abstract class

--- a/Py/09OOP/py_oop.ipynb
+++ b/Py/09OOP/py_oop.ipynb
@@ -15,8 +15,7 @@
    "source": [
     "\"\"\"\n",
     "cd .\\Py\\09OOP\\\n",
-    "jupyter nbconvert --to markdown 00py_oop.ipynb --output README.md\n",
-    "\n",
+    "jupyter nbconvert py_oop.ipynb --to markdown  --output README.md\n",
     "\"\"\"\n"
    ]
   },
@@ -1192,7 +1191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1343,6 +1342,81 @@
     "\n",
     "m = Manager()\n",
     "m.greet()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Abstract Class in python"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In Python, an abstract class is a class that cannot be instantiated and is meant to serve as a blueprint for other classes. It is often used when you want to define a common interface or set of methods that derived classes must implement. Python provides a module called `abc` (Abstract Base Classes) for working with abstract classes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from abc import ABC, abstractmethod\n",
+    "\n",
+    "class MyAbstractClass(ABC):\n",
+    "    @abstractmethod\n",
+    "    def my_abstract_method(self):\n",
+    "        pass\n",
+    "\n",
+    "    @abstractmethod\n",
+    "    def another_abstract_method(self):\n",
+    "        pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "Can't instantiate abstract class MyAbstractClass with abstract methods another_abstract_method, my_abstract_method",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-3-350a722c5d4e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# This will raise a TypeError\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mobj\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mMyAbstractClass\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: Can't instantiate abstract class MyAbstractClass with abstract methods another_abstract_method, my_abstract_method"
+     ]
+    }
+   ],
+   "source": [
+    "# This will raise a TypeError\n",
+    "obj = MyAbstractClass()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here's an example of a concrete class that inherits from the abstract class and provides implementations for the abstract methods:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MyConcreteClass(MyAbstractClass):\n",
+    "    def my_abstract_method(self):\n",
+    "        return \"Implemented my_abstract_method\"\n",
+    "\n",
+    "    def another_abstract_method(self):\n",
+    "        return \"Implemented another_abstract_method\""
    ]
   },
   {
